add logger